# microarch-delivery

./: .gitignore  Makefile  README.md  logging.json  pyproject.toml  settings.toml
api/: openapi.yaml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 28f911a68112_create_order_table.py  58a22f6c9fd5_create_courier_and_transport_table.py
src/app/: main.py
src/app/adapters/in_/http/apis/: couriers_api.py  orders_api.py
src/app/adapters/in_/http/models/: courier.py  error.py  location.py  order.py
src/app/adapters/in_/jobs/: jobs.py
src/app/core/application/usecases/commands/: create_order.py  dispatch_orders.py  move_couriers.py
src/app/core/application/usecases/common/: command.py  location_dto.py  query.py
src/app/core/application/usecases/queries/: get_all_couriers.py  get_unfinished_orders.py
src/app/core/domain/kernel/: location.py
src/app/core/domain/model/courier/: courier.py  transport.py
src/app/core/domain/model/order/: order.py
src/app/core/domain/services/: dispatch_service.py  i_dispatch_service.py
src/app/core/ports/: geo_client.py  i_courier_repository.py  i_order_repository.py
src/app/ioc/: client_provider.py  composition_root.py  config_provider.py  dispatch_service_provider.py  handlers_provider.py  jobs_provider.py  repository_provider.py  sqlalchemy_provider.py
src/test/core/application/commands/: test_create_order.py  test_dispatch_orders.py  test_move_courier.py
src/test/core/application/queries/: test_integration_get_all_couriers.py  test_integration_get_unfinished_orders.py  test_unit_get_all_couriers.py  test_unit_get_unfinished_orders.py
src/test/core/domain/kernel/: test_location.py
src/test/core/domain/model/courier/: test_courier.py  test_transport.py
src/test/core/domain/model/order/: test_order.py
src/test/core/domain/services/: test_dispatch_service.py
