[project]
name = "microarch-delivery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Фаль Александр Евгеньевич", email = "iamafal@yandex.ru" }
]
dependencies = [
    "pydantic==2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/microarch_delivery"]

[tool.pytest.ini_options]
pythonpath = "src"