[project]
name = "microarch-delivery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Фаль Александр Евгеньевич", email = "iamafal@yandex.ru" }
]
dependencies = [
    "pydantic==2.8.2",
    "fastapi[standard]==0.115.11",
    "dishka==1.4.2",
    "hypercorn==0.17.3",
    "alembic==1.15.1",
    "dynaconf==3.2.10",
    "psycopg==3.2.6",
    "psycopg[binary]==3.2.6",
    "sqlalchemy[asyncio]==2.0.39",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.3.5",
    "pytest-alembic==0.11.1",
    "pytest-asyncio==0.25.3",
    "testcontainers[postgres]==4.9.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/microarch_delivery"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
